# FastAPI-NLP

./: README.md  input.json  main.py  pyproject.toml
