[tool.poetry]
name = "fastapi-nlp"
version = "0.1.0"
description = ""
authors = ["Gabrijel Radovcic"]
package-mode = "true"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
scikit-learn = "^1.5.2"
protobuf = "3.20.3"
transformers = "^4.45.1"
sentence-transformers = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
